futures/testcrate/ui/nested.stderr
error: stream_yield! cannot be allowed outside of async_stream blocks, and functions.
  --> $DIR/nested.rs:10:13
   |
10 |             stream_yield!(i * i);
   |             ^^^^^^^^^^^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

